--- a/Stipendium/Web.config
+++ b/Stipendium/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Stipendium-20180821113020.mdf;Initial Catalog=aspnet-Stipendium-20180821113020;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Entities" connectionString="metadata=res://*/ExcelEN.csdl|res://*/ExcelEN.ssdl|res://*/ExcelEN.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Stipendium-20180821113020.mdf;initial catalog=aspnet-Stipendium-20180821113020;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -20,7 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" maxRequestLength="5120"/>
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
