--- a/Stipendium/Stipendium.csproj
+++ b/Stipendium/Stipendium.csproj
@@ -215,6 +215,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\StiftelsesController.cs" />
@@ -277,10 +278,15 @@
     <Compile Include="Migrations\201808271510358_backtostring.Designer.cs">
       <DependentUpon>201808271510358_backtostring.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808301356419_CompanyVModel.cs" />
+    <Compile Include="Migrations\201808301356419_CompanyVModel.Designer.cs">
+      <DependentUpon>201808301356419_CompanyVModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Counties.cs" />
     <Compile Include="Models\County.cs" />
+    <Compile Include="Models\CustomAuthorize.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Municipality.cs" />
@@ -381,6 +387,14 @@
     <Content Include="Views\Stiftelses\UploadExcel.cshtml" />
     <Content Include="Views\Stiftelses\SearchResults.cshtml" />
     <Content Include="Views\Stiftelses\Details.cshtml" />
+    <Content Include="Views\Home\Join.cshtml" />
+    <Content Include="Views\Home\Registration.cshtml" />
+    <Content Include="Views\Stiftelses\Create.cshtml" />
+    <Content Include="Views\Account\RegisterCompany.cshtml" />
+    <Content Include="Views\Account\RegisterPrivate.cshtml" />
+    <Content Include="Views\Admin\UserAccounts.cshtml" />
+    <Content Include="Views\Manage\EditPrivUser.cshtml" />
+    <Content Include="Views\Manage\EditCompUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -429,6 +443,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808271510358_backtostring.resx">
       <DependentUpon>201808271510358_backtostring.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808301356419_CompanyVModel.resx">
+      <DependentUpon>201808301356419_CompanyVModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
