--- a/Stipendium/packages.config
+++ b/Stipendium/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Core" version="1.7.2" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
@@ -35,6 +36,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
+  <package id="Node.js" version="0.12.7" targetFramework="net472" />
+  <package id="NoGit" version="0.1.0" targetFramework="net472" />
+  <package id="Npm" version="3.5.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
