--- a/Stipendium/Stipendium.csproj
+++ b/Stipendium/Stipendium.csproj
@@ -219,8 +219,8 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PageviewsController.cs" />
+    <Compile Include="Controllers\SearchTermsController.cs" />
     <Compile Include="Controllers\StiftelsesController.cs" />
-    <Compile Include="Controllers\StipendsController.cs" />
     <Compile Include="ExcelEN.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -291,18 +291,20 @@
     <Compile Include="Migrations\201809031103488_Stiftelses_DateAdded.Designer.cs">
       <DependentUpon>201809031103488_Stiftelses_DateAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809040838297_SearchTerms.cs" />
+    <Compile Include="Migrations\201809040838297_SearchTerms.Designer.cs">
+      <DependentUpon>201809040838297_SearchTerms.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Counties.cs" />
-    <Compile Include="Models\County.cs" />
     <Compile Include="Models\CustomAuthorize.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\Municipality.cs" />
     <Compile Include="Models\Pageviews.cs" />
     <Compile Include="Models\SearchQuery.cs" />
+    <Compile Include="Models\SearchTerm.cs" />
     <Compile Include="Models\Stiftelse.cs" />
-    <Compile Include="Models\Stipend.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Stiftelses.cs">
@@ -395,12 +397,6 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
-    <Content Include="Views\Stipends\Create.cshtml" />
-    <Content Include="Views\Stipends\Delete.cshtml" />
-    <Content Include="Views\Stipends\Details.cshtml" />
-    <Content Include="Views\Stipends\Edit.cshtml" />
-    <Content Include="Views\Stipends\Index.cshtml" />
-    <Content Include="Views\Stipends\SearchResults.cshtml" />
     <Content Include="Views\Stiftelses\Index.cshtml" />
     <Content Include="Views\Stiftelses\UploadExcel.cshtml" />
     <Content Include="Views\Stiftelses\SearchResults.cshtml" />
@@ -423,6 +419,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Doc\" />
     <Folder Include="Views\Pageviews\" />
+    <Folder Include="Views\SearchTerms\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
@@ -476,6 +473,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201809031103488_Stiftelses_DateAdded.resx">
       <DependentUpon>201809031103488_Stiftelses_DateAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809040838297_SearchTerms.resx">
+      <DependentUpon>201809040838297_SearchTerms.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
