--- a/Stipendium/Web.config
+++ b/Stipendium/Web.config
@@ -12,11 +12,12 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Stipendium-20180821113020.mdf;Initial Catalog=aspnet-Stipendium-20180821113020;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="Entities" connectionString="metadata=res://*/ExcelEN.csdl|res://*/ExcelEN.ssdl|res://*/ExcelEN.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Stipendium-20180821113020.mdf;initial catalog=aspnet-Stipendium-20180821113020;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="C:\Users\localuser\source\repos\Stipendium\Stipendium\AppSecretSettings.config">
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="SendGridAPIKey" value="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"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
