--- a/Stipendium/packages.config
+++ b/Stipendium/packages.config
@@ -43,6 +43,8 @@
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="popper.js" version="1.14.0" targetFramework="net472" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
