--- a/Stipendium/AppSecretSettings.config
+++ b/Stipendium/AppSecretSettings.config
@@ -2,5 +2,5 @@
   <!-- SendGrid-->
   <add key="mailAccount" value="My mail account." />
   <add key="mailPassword" value="My mail password." />
-  <add key="SengGridAPIKey" value="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"/>
+  <add key="SendGridAPIKey" value="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"/>
 </appSettings>
