Recently updates Stiftelses list Hidden SendGrid API key Deployed to Azure Updated Excel upload and E-mail confirmations to work while published

--- a/Stipendium/AppSecretSettings.config
+++ b/Stipendium/AppSecretSettings.config
@@ -2,5 +2,5 @@
   <!-- SendGrid-->
   <add key="mailAccount" value="My mail account." />
   <add key="mailPassword" value="My mail password." />
-  <add key="SendGridAPIKey" value="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"/>
+  <add key="SendGridAPIKey" value="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"/>
 </appSettings>
