Changes to home page

--- a/Stipendium/Stipendium.csproj
+++ b/Stipendium/Stipendium.csproj
@@ -389,6 +389,7 @@
     <Content Include="angular-editor-master\LICENSE" />
     <Content Include="angular-editor-master\README.md" />
     <None Include="Properties\PublishProfiles\Stipendium - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\StipendiumSearch - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
