--- a/Stipendium/packages.config
+++ b/Stipendium/packages.config
@@ -4,6 +4,8 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="ExcelDataReader" version="3.4.1" targetFramework="net472" />
+  <package id="ExcelDataReader.DataSet" version="3.4.1" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net472" />
