--- a/Stipendium/Stipendium.csproj
+++ b/Stipendium/Stipendium.csproj
@@ -465,6 +465,7 @@
     <Content Include="Views\Admin\Index.cshtml" />
     <Content Include="Views\Admin\EmailConfirmationTemplate.cshtml" />
     <Content Include="Views\Admin\NewlyUpdated.cshtml" />
+    <Content Include="Views\Shared\Info.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
