--- a/Stipendium/Stipendium.csproj
+++ b/Stipendium/Stipendium.csproj
@@ -46,6 +46,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus, Version=4.5.2.1, Culture=neutral, PublicKeyToken=ea159fdaa78159a1, processorArchitecture=MSIL">
+      <HintPath>..\packages\EPPlus.4.5.2.1\lib\net40\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="ExcelDataReader, Version=3.4.1.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
       <HintPath>..\packages\ExcelDataReader.3.4.1\lib\net45\ExcelDataReader.dll</HintPath>
     </Reference>
@@ -62,6 +65,7 @@
     <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="Remotion, Version=1.13.52.2, Culture=neutral, PublicKeyToken=0669cf0452175907, processorArchitecture=MSIL">
       <HintPath>..\packages\LinqToExcel.1.11.0\lib\Remotion.dll</HintPath>
     </Reference>
@@ -351,6 +355,7 @@
     <Compile Include="Models\SearchQuery.cs" />
     <Compile Include="Models\SearchTerm.cs" />
     <Compile Include="Models\Stiftelse.cs" />
+    <Compile Include="Models\StiftelseApplicationForm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Stiftelses.cs">
@@ -410,6 +415,7 @@
     <Content Include="angular-editor-master\fonts\fontawesome-webfont.woff" />
     <Content Include="angular-editor-master\LICENSE" />
     <Content Include="angular-editor-master\README.md" />
+    <Content Include="App_Data\EntryTemplate.xls" />
     <None Include="Properties\PublishProfiles\Stipendium - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\StipendiumSearch - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -481,9 +487,9 @@
     <Content Include="Views\Comments\Edit.cshtml" />
     <Content Include="Views\Comments\Index.cshtml" />
     <Content Include="Views\Comments\Details.cshtml" />
+    <Content Include="Views\Account\StiftelseApplication.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="Doc\" />
     <Folder Include="Views\Pageviews\" />
     <Folder Include="Views\SearchTerms\" />
