--- a/Stipendium/packages.config
+++ b/Stipendium/packages.config
@@ -3,10 +3,13 @@
   <package id="AngularJS.Core" version="1.7.2" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.3.7" targetFramework="net472" />
+  <package id="ClosedXML" version="0.93.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
-  <package id="EPPlus" version="4.5.2.1" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.4.1" targetFramework="net472" />
   <package id="ExcelDataReader.DataSet" version="3.4.1" targetFramework="net472" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net472" />
+  <package id="FastMember.Signed" version="1.3.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="LinqToExcel" version="1.11.0" targetFramework="net472" />
@@ -48,6 +51,8 @@
   <package id="popper.js" version="1.14.0" targetFramework="net472" />
   <package id="Sendgrid" version="9.9.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
